# tests/c/meson.build
# Complex single precision test suite

# Build complex single precision test utilities (verification routines)
subdir('testutils')

# Include directories:
#   '..'       -> tests/ (for test_harness.h, test_rng.h)
#   'testutils' -> tests/c/testutils/ (for verify.h)
test_inc_c = include_directories('..', 'testutils')

# =============================================================================
# LAPACK Test Driver Ports (cchk*.f and cdrv*.f)
# Line-by-line translations of the official LAPACK test suite
# =============================================================================

lapack_tests_c = {
  'cchkbk': ['test_cchkbk.c', 'eigen'],
  'cchkbl': ['test_cchkbl.c', 'eigen'],
  'cchkec': ['test_cchkec.c', 'eigen'],
  'cchkeq': ['test_cchkeq.c', 'condition'],
  'cchkge': ['test_cchkge.c', 'lu'],
  'cchkgt': ['test_cchkgt.c', 'tridiag'],
  'cchkgb': ['test_cchkgb.c', 'band'],
  'cchkgk': ['test_cchkgk.c', 'eigen'],
  'cchkgl': ['test_cchkgl.c', 'eigen'],
  'cchkhe': ['test_cchkhe.c', 'hermitian'],
  'cchkhe_aa': ['test_cchkhe_aa.c', 'hermitian'],
  'cchkhe_aa_2stage': ['test_cchkhe_aa_2stage.c', 'hermitian'],
  'cchkhe_rk': ['test_cchkhe_rk.c', 'hermitian'],
  'cchkhe_rook': ['test_cchkhe_rook.c', 'hermitian'],
  'cchkhp': ['test_cchkhp.c', 'hermitian'],
  'cchklq': ['test_cchklq.c', 'qr'],
  'cchklqt': ['test_cchklqt.c', 'qr'],
  'cchklqtp': ['test_cchklqtp.c', 'qr'],
  'cchkps': ['test_cchkps.c', 'cholesky'],
  'cchkpo': ['test_cchkpo.c', 'cholesky'],
  'cchkpp': ['test_cchkpp.c', 'cholesky'],
  'cchkpb': ['test_cchkpb.c', 'band'],
  'cchkpt': ['test_cchkpt.c', 'tridiag'],
  'cchkqr': ['test_cchkqr.c', 'qr'],
  'cchkqrt': ['test_cchkqrt.c', 'qr'],
  'cchkqrtp': ['test_cchkqrtp.c', 'qr'],
  'cchkql': ['test_cchkql.c', 'qr'],
  'cchkq3': ['test_cchkq3.c', 'qr'],
  'cchkqp3rk': ['test_cchkqp3rk.c', 'qr'],
  'cchkrq': ['test_cchkrq.c', 'qr'],
  'cchksp': ['test_cchksp.c', 'symmetric'],
  'cchksy': ['test_cchksy.c', 'symmetric'],
  'cchksy_aa': ['test_cchksy_aa.c', 'symmetric'],
  'cchksy_aa_2stage': ['test_cchksy_aa_2stage.c', 'symmetric'],
  'cchksy_rk': ['test_cchksy_rk.c', 'symmetric'],
  'cchksy_rook': ['test_cchksy_rook.c', 'symmetric'],
  'cchktb': ['test_cchktb.c', 'triangular'],
  'cchktp': ['test_cchktp.c', 'triangular'],
  'cchktr': ['test_cchktr.c', 'triangular'],
  'cchktsqr': ['test_cchktsqr.c', 'qr'],
  'cchktz': ['test_cchktz.c', 'qr'],
  'cchkunhr_col': ['test_cchkunhr_col.c', 'qr'],
  'cchkrfp': ['test_cchkrfp.c', 'rfp'],
  'cdrvrf1': ['test_cdrvrf1.c', 'rfp'],
  'cdrvrf2': ['test_cdrvrf2.c', 'rfp'],
  'cdrvrf3': ['test_cdrvrf3.c', 'rfp'],
  'cdrvrf4': ['test_cdrvrf4.c', 'rfp'],
  'cdrvge': ['test_cdrvge.c', 'solve'],
  'cdrvgb': ['test_cdrvgb.c', 'solve'],
  'cdrvgt': ['test_cdrvgt.c', 'solve'],
  'cdrvhe': ['test_cdrvhe.c', 'solve'],
  'cdrvhe_aa': ['test_cdrvhe_aa.c', 'solve'],
  'cdrvhe_aa_2stage': ['test_cdrvhe_aa_2stage.c', 'solve'],
  'cdrvhe_rk': ['test_cdrvhe_rk.c', 'solve'],
  'cdrvhe_rook': ['test_cdrvhe_rook.c', 'solve'],
  'cdrvhp': ['test_cdrvhp.c', 'solve'],
  'cdrvsp': ['test_cdrvsp.c', 'solve'],
  'cdrvsy': ['test_cdrvsy.c', 'solve'],
  'cdrvsy_aa': ['test_cdrvsy_aa.c', 'solve'],
  'cdrvsy_aa_2stage': ['test_cdrvsy_aa_2stage.c', 'solve'],
  'cdrvsy_rk': ['test_cdrvsy_rk.c', 'solve'],
  'cdrvsy_rook': ['test_cdrvsy_rook.c', 'solve'],
  'cdrvpo': ['test_cdrvpo.c', 'solve'],
  'cdrvpp': ['test_cdrvpp.c', 'solve'],
  'cdrvpb': ['test_cdrvpb.c', 'solve'],
  'cdrvpt': ['test_cdrvpt.c', 'solve'],
  'cdrvls': ['test_cdrvls.c', 'solve'],
  'cckglm': ['test_cckglm.c', 'eigen'],
  'ccklse': ['test_ccklse.c', 'eigen'],
  'cckgsv': ['test_cckgsv.c', 'eigen'],
  'cckgqr': ['test_cckgqr.c', 'eigen'],
  'cchkbb': ['test_cchkbb.c', 'eigen'],
  'cchkbd': ['test_cchkbd.c', 'eigen'],
  'cchkhb': ['test_cchkhb.c', 'eigen'],
  'cchkhb2stg': ['test_cchkhb2stg.c', 'eigen'],
  'cchkhs': ['test_cchkhs.c', 'eigen'],
  'cchkst': ['test_cchkst.c', 'eigen'],
  'cchkst2stg': ['test_cchkst2stg.c', 'eigen'],
  'cchkgg': ['test_cchkgg.c', 'eigen'],
  'cdrves': ['test_cdrves.c', 'eigen'],
  'cdrvev': ['test_cdrvev.c', 'eigen'],
  'cdrvsx': ['test_cdrvsx.c', 'eigen'],
  'cdrvvx': ['test_cdrvvx.c', 'eigen'],
  'cdrges': ['test_cdrges.c', 'eigen'],
  'cdrges3': ['test_cdrges3.c', 'eigen'],
  'cdrgev': ['test_cdrgev.c', 'eigen'],
  'cdrgev3': ['test_cdrgev3.c', 'eigen'],
  'cdrgsx': ['test_cdrgsx.c', 'eigen'],
  'cdrgvx': ['test_cdrgvx.c', 'eigen'],
  'cdrvst': ['test_cdrvst.c', 'eigen'],
  'cdrvst2stg': ['test_cdrvst2stg.c', 'eigen'],
  'cdrvsg': ['test_cdrvsg.c', 'eigen'],
  'cdrvsg2stg': ['test_cdrvsg2stg.c', 'eigen'],
  'cdrvbd': ['test_cdrvbd.c', 'eigen'],
  'cckcsd': ['test_cckcsd.c', 'eigen'],
}

foreach name, info : lapack_tests_c
  test(name,
    executable('test_' + name, info[0],
      include_directories: test_inc_c,
      dependencies: [verify_dep_c, cmocka_dep],
    ),
    suite: info[1],
    timeout: 300,
    is_parallel: true,
    env: test_env,
  )
endforeach
