# tests/z/meson.build
# Complex double precision test suite

# Build complex double precision test utilities (verification routines)
subdir('testutils')

# Include directories:
#   '..'       -> tests/ (for test_harness.h, test_rng.h)
#   'testutils' -> tests/z/testutils/ (for verify.h)
test_inc_z = include_directories('..', 'testutils')

# =============================================================================
# LAPACK Test Driver Ports (zchk*.f and zdrv*.f)
# Line-by-line translations of the official LAPACK test suite
# =============================================================================

lapack_tests_z = {
  'zchkbk': ['test_zchkbk.c', 'eigen'],
  'zchkbl': ['test_zchkbl.c', 'eigen'],
  'zchkec': ['test_zchkec.c', 'eigen'],
  'zchkeq': ['test_zchkeq.c', 'condition'],
  'zchkge': ['test_zchkge.c', 'lu'],
  'zchkgt': ['test_zchkgt.c', 'tridiag'],
  'zchkgb': ['test_zchkgb.c', 'band'],
  'zchkgk': ['test_zchkgk.c', 'eigen'],
  'zchkgl': ['test_zchkgl.c', 'eigen'],
  'zdrvab': ['test_zdrvab.c', 'solve'],
  'zdrvac': ['test_zdrvac.c', 'solve'],
  'zchkhe': ['test_zchkhe.c', 'hermitian'],
  'zchkhe_aa': ['test_zchkhe_aa.c', 'hermitian'],
  'zchkhe_aa_2stage': ['test_zchkhe_aa_2stage.c', 'hermitian'],
  'zchkhe_rk': ['test_zchkhe_rk.c', 'hermitian'],
  'zchkhe_rook': ['test_zchkhe_rook.c', 'hermitian'],
  'zchkhp': ['test_zchkhp.c', 'hermitian'],
  'zchklq': ['test_zchklq.c', 'qr'],
  'zchklqt': ['test_zchklqt.c', 'qr'],
  'zchklqtp': ['test_zchklqtp.c', 'qr'],
  'zchkps': ['test_zchkps.c', 'cholesky'],
  'zchkpo': ['test_zchkpo.c', 'cholesky'],
  'zchkpp': ['test_zchkpp.c', 'cholesky'],
  'zchkpb': ['test_zchkpb.c', 'band'],
  'zchkpt': ['test_zchkpt.c', 'tridiag'],
  'zchkqr': ['test_zchkqr.c', 'qr'],
  'zchkqrt': ['test_zchkqrt.c', 'qr'],
  'zchkqrtp': ['test_zchkqrtp.c', 'qr'],
  'zchkql': ['test_zchkql.c', 'qr'],
  'zchkq3': ['test_zchkq3.c', 'qr'],
  'zchkqp3rk': ['test_zchkqp3rk.c', 'qr'],
  'zchkrq': ['test_zchkrq.c', 'qr'],
  'zchksp': ['test_zchksp.c', 'symmetric'],
  'zchksy': ['test_zchksy.c', 'symmetric'],
  'zchksy_aa': ['test_zchksy_aa.c', 'symmetric'],
  'zchksy_aa_2stage': ['test_zchksy_aa_2stage.c', 'symmetric'],
  'zchksy_rk': ['test_zchksy_rk.c', 'symmetric'],
  'zchksy_rook': ['test_zchksy_rook.c', 'symmetric'],
  'zchktb': ['test_zchktb.c', 'triangular'],
  'zchktp': ['test_zchktp.c', 'triangular'],
  'zchktr': ['test_zchktr.c', 'triangular'],
  'zchktsqr': ['test_zchktsqr.c', 'qr'],
  'zchktz': ['test_zchktz.c', 'qr'],
  'zchkunhr_col': ['test_zchkunhr_col.c', 'qr'],
  'zchkrfp': ['test_zchkrfp.c', 'rfp'],
  'zdrvrf1': ['test_zdrvrf1.c', 'rfp'],
  'zdrvrf2': ['test_zdrvrf2.c', 'rfp'],
  'zdrvrf3': ['test_zdrvrf3.c', 'rfp'],
  'zdrvrf4': ['test_zdrvrf4.c', 'rfp'],
  'zdrvge': ['test_zdrvge.c', 'solve'],
  'zdrvgb': ['test_zdrvgb.c', 'solve'],
  'zdrvgt': ['test_zdrvgt.c', 'solve'],
  'zdrvhe': ['test_zdrvhe.c', 'solve'],
  'zdrvhe_aa': ['test_zdrvhe_aa.c', 'solve'],
  'zdrvhe_aa_2stage': ['test_zdrvhe_aa_2stage.c', 'solve'],
  'zdrvhe_rk': ['test_zdrvhe_rk.c', 'solve'],
  'zdrvhe_rook': ['test_zdrvhe_rook.c', 'solve'],
  'zdrvhp': ['test_zdrvhp.c', 'solve'],
  'zdrvsp': ['test_zdrvsp.c', 'solve'],
  'zdrvsy': ['test_zdrvsy.c', 'solve'],
  'zdrvsy_aa': ['test_zdrvsy_aa.c', 'solve'],
  'zdrvsy_aa_2stage': ['test_zdrvsy_aa_2stage.c', 'solve'],
  'zdrvsy_rk': ['test_zdrvsy_rk.c', 'solve'],
  'zdrvsy_rook': ['test_zdrvsy_rook.c', 'solve'],
  'zdrvpo': ['test_zdrvpo.c', 'solve'],
  'zdrvpp': ['test_zdrvpp.c', 'solve'],
  'zdrvpb': ['test_zdrvpb.c', 'solve'],
  'zdrvpt': ['test_zdrvpt.c', 'solve'],
  'zdrvls': ['test_zdrvls.c', 'solve'],
  'zckglm': ['test_zckglm.c', 'eigen'],
  'zcklse': ['test_zcklse.c', 'eigen'],
  'zckgsv': ['test_zckgsv.c', 'eigen'],
  'zckgqr': ['test_zckgqr.c', 'eigen'],
  'zchkbb': ['test_zchkbb.c', 'eigen'],
  'zchkbd': ['test_zchkbd.c', 'eigen'],
  'zchkhb': ['test_zchkhb.c', 'eigen'],
  'zchkhb2stg': ['test_zchkhb2stg.c', 'eigen'],
  'zchkhs': ['test_zchkhs.c', 'eigen'],
  'zchkst': ['test_zchkst.c', 'eigen'],
  'zchkst2stg': ['test_zchkst2stg.c', 'eigen'],
  'zchkgg': ['test_zchkgg.c', 'eigen'],
  'zdrves': ['test_zdrves.c', 'eigen'],
  'zdrvev': ['test_zdrvev.c', 'eigen'],
  'zdrvsx': ['test_zdrvsx.c', 'eigen'],
  'zdrvvx': ['test_zdrvvx.c', 'eigen'],
  'zdrges': ['test_zdrges.c', 'eigen'],
  'zdrges3': ['test_zdrges3.c', 'eigen'],
  'zdrgev': ['test_zdrgev.c', 'eigen'],
  'zdrgev3': ['test_zdrgev3.c', 'eigen'],
  'zdrgsx': ['test_zdrgsx.c', 'eigen'],
  'zdrgvx': ['test_zdrgvx.c', 'eigen'],
  'zdrvst': ['test_zdrvst.c', 'eigen'],
  'zdrvst2stg': ['test_zdrvst2stg.c', 'eigen'],
  'zdrvsg': ['test_zdrvsg.c', 'eigen'],
  'zdrvsg2stg': ['test_zdrvsg2stg.c', 'eigen'],
  'zdrvbd': ['test_zdrvbd.c', 'eigen'],
  'zckcsd': ['test_zckcsd.c', 'eigen'],
}

foreach name, info : lapack_tests_z
  test(name,
    executable('test_' + name, info[0],
      include_directories: test_inc_z,
      dependencies: [verify_dep_z, cmocka_dep],
    ),
    suite: info[1],
    timeout: 300,
    is_parallel: true,
  )
endforeach
